Fix tooltip transition shift.

--- a/src/styles/components/_tooltip.scss
+++ b/src/styles/components/_tooltip.scss
@@ -10,7 +10,7 @@
 	padding: 0.25em 0.5em;
 	display: inherit;
 	opacity: 0;
-	translate: calc(-50% - 1em) -125%;
+	translate: calc(-50% - 0.8em) -125%;
 	will-change: opacity;
 	box-shadow: var(--shadow);
 	transition:
